# backend/src/schemas/auth.schema.ts
@@ -2,10 +2,15 @@ import {z} from 'zod';
 
 export const registerSchema = z.object({
   email: z.string().email(),
-  password: z.string().min(8, 'Password must be at least 8 characters long')
+  password: z.string().min(8, 'Password must be at least 8 characters long'),
+  firstName: z.string().min(1, 'First name is required').max(100),
+  lastName: z.string().min(1, 'Last name is required').max(100)
 });
 
-export const loginSchema = registerSchema;
+export const loginSchema = registerSchema.pick({
+  email: true,
+  password: true
+});
 
 export type RegisterInput = z.infer<typeof registerSchema>;
 export type LoginInput = z.infer<typeof loginSchema>;
