# backend/src/types/user.ts
@@ -3,6 +3,8 @@ export type UserRole = 'USER' | 'ADMIN';
 export interface UserRolePayload {
   id: string;
   email: string;
+  firstName: string;
+  lastName: string;
   role: UserRole;
   isActive?: boolean;
 }
